Move github repo to bottom links and use CSS to ensure that login and blog are available on mobile view - create class for highlighting private content links

--- a/burendo-handbook/src/css/custom.css
+++ b/burendo-handbook/src/css/custom.css
@@ -17,6 +17,12 @@
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+/* Highlight private content */
+.private-content {
+  border-color: yellowgreen;
+  font-style: italic;
+}
+
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
   --ifm-color-primary: #25c2a0;
@@ -27,4 +33,34 @@
   --ifm-color-primary-lighter: #32d8b4;
   --ifm-color-primary-lightest: #4fddbf;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+}
+
+/* Private content in dark mode */
+[data-theme='dark'] .private-content {
+  border-color: yellow;
+}
+
+/* In mobile view, hide the search */
+@media (max-width: 996px) {
+  div.searchBox_ZlJk > * {
+    display: none;
+  }
+}
+
+/* In mobile view, hide the search and name */
+@media (max-width: 996px) {
+  div.searchBox_ZlJk > * {
+    display: none;
+  }
+  b.navbar__items.text--truncate > * {
+    display: none;
+  }
+}
+
+/* In mobile view, show navbar right items */
+@media (max-width: 996px) {
+  div.navbar__items.navbar__items--right > * {
+    display: block;
+    position: inherit;
+  }
 }
